@@ -29,6 +29,7 @@ lazy val scalafxSettings: Seq[Def.Setting[_]] =
       "-XX:+UnlockExperimentalVMOptions",
       "-XX:+UseNewCode",
       "--add-modules=java.base",
+      "--add-modules=jdk.incubator.concurrent",
       "--add-opens java.base/jdk.internal.vm=ALL-UNNAMED",
       "--add-exports java.base/jdk.internal.vm=ALL-UNNAMED",
       "--enable-preview"
